CHAT-183: Chat avatars

--- a/src/main/webapp/Hablar.html
+++ b/src/main/webapp/Hablar.html
@@ -24,6 +24,7 @@
     <meta name="hablar.inline" content="vertical_div" />
     <meta name="hablar.width" content="100%" />
     <meta name="hablar.height" content="100%" />
+    <meta name="hablar.avatarProvider" content="gravatar" />
 
     <script type="text/javascript" src="HablarHtml/HablarHtml.nocache.js"></script>
   </head>
